[gd_scene load_steps=23 format=3 uid="uid://ctjk5gnnswmro"]

[ext_resource type="Script" path="res://scenes/ui/pick_player.gd" id="1_qh2g4"]
[ext_resource type="Texture2D" uid="uid://dtopvm2uv7k" path="res://assets/textures/icons/arrow_left.png" id="2_og7l6"]
[ext_resource type="PackedScene" uid="uid://b1etet1gv6g34" path="res://scenes/ui/map_display.tscn" id="3_5fyng"]
[ext_resource type="SpriteFrames" uid="uid://olstouu8ajg" path="res://tress/sf_ninja_frog.tres" id="3_sn5kd"]
[ext_resource type="Texture2D" uid="uid://df6vyq1rsihq4" path="res://assets/textures/icons/arrow_right.png" id="4_sh1ib"]
[ext_resource type="Texture2D" uid="uid://d2inox72gtl88" path="res://assets/textures/icons/start.png" id="6_dnbxj"]
[ext_resource type="Texture2D" uid="uid://rkkh0qqadmoq" path="res://assets/textures/icons/back.png" id="6_owagj"]

[sub_resource type="Animation" id="Animation_op22g"]
resource_name = "Enter"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 648), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_b1jxm"]
resource_name = "Exit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 648)]
}

[sub_resource type="Animation" id="Animation_v5rbb"]
resource_name = "RESET"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 648), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vxu8"]
_data = {
"Enter": SubResource("Animation_op22g"),
"Exit": SubResource("Animation_b1jxm"),
"RESET": SubResource("Animation_v5rbb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5jtfq"]
bg_color = Color(0.223529, 0.243137, 0.27451, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_r5kt6"]
font_size = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8lcsw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jnmdu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_72687"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2u4s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fyumj"]
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sc4ma"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lsle4"]

[sub_resource type="LabelSettings" id="LabelSettings_nwgui"]
font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8q86b"]

[node name="PickPlayer" type="CanvasLayer"]
script = ExtResource("1_qh2g4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8vxu8")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 648.0
offset_right = 1152.0
offset_bottom = 1296.0

[node name="MapDisplay" parent="Control" instance=ExtResource("3_5fyng")]
layout_mode = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5jtfq")

[node name="PickTitle" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.0
offset_top = 40.0
offset_right = 199.0
offset_bottom = 112.0
grow_horizontal = 2
text = "Pick A Character"
label_settings = SubResource("LabelSettings_r5kt6")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -163.0
offset_right = 208.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Scroller" type="ScrollContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 3

[node name="PlayerList" type="HBoxContainer" parent="Control/Panel/VBoxContainer/Scroller"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="HSeparator" type="HSeparator" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8lcsw")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="LeftSwitch" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jnmdu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_72687")
icon = ExtResource("2_og7l6")
flat = true

[node name="VSeparator" type="VSeparator" parent="Control/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_h2u4s")

[node name="PlayerBox" type="Panel" parent="Control/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_fyumj")

[node name="PlayerAnim" type="AnimatedSprite2D" parent="Control/Panel/VBoxContainer/HBoxContainer/PlayerBox"]
position = Vector2(120, 120)
scale = Vector2(5, 5)
sprite_frames = ExtResource("3_sn5kd")
animation = &"Walk"

[node name="VSeparator2" type="VSeparator" parent="Control/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_sc4ma")

[node name="RightSwitch" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lsle4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lsle4")
icon = ExtResource("4_sh1ib")
flat = true
icon_alignment = 2

[node name="PlayerName" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_nwgui")
horizontal_alignment = 1

[node name="LeftBox" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 73.0
offset_top = 70.0
offset_right = 273.0
offset_bottom = 570.0
metadata/_edit_group_ = true

[node name="BackButton" type="Button" parent="Control/Panel/LeftBox"]
clip_contents = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_8q86b")
text = "Back"
icon = ExtResource("6_owagj")
expand_icon = true

[node name="Abilities" type="Panel" parent="Control/Panel/LeftBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="Control/Panel/LeftBox/Abilities"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_top = 396.0
offset_right = 200.0
offset_bottom = 446.0
theme_override_font_sizes/font_size = 30
text = "Abilities"
horizontal_alignment = 1

[node name="RightBox" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 871.0
offset_top = 70.0
offset_right = 1071.0
offset_bottom = 570.0
metadata/_edit_group_ = true

[node name="Maps" type="Panel" parent="Control/Panel/RightBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/RightBox/Maps"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Control/Panel/RightBox/Maps/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Maps"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel/RightBox/Maps/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapItems" type="VBoxContainer" parent="Control/Panel/RightBox/Maps/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Control/Panel/RightBox"]
clip_contents = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_8q86b")
text = "Start"
icon = ExtResource("6_dnbxj")
icon_alignment = 2
expand_icon = true

[node name="SoundPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer/LeftSwitch" to="." method="_on_left_switch_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer/RightSwitch" to="." method="_on_right_switch_pressed"]
[connection signal="mouse_entered" from="Control/Panel/LeftBox/BackButton" to="." method="_play_button_hover_sound"]
[connection signal="pressed" from="Control/Panel/LeftBox/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="Control/Panel/RightBox/StartButton" to="." method="_play_button_hover_sound"]
[connection signal="pressed" from="Control/Panel/RightBox/StartButton" to="." method="_on_start_button_pressed"]
